==> BrushlessPower/SBUS2-Telemetry/src/SBUS_usart_ESP32.cpp <==
#include "SBUS_usart.h"
#include "esp32-hal.h"
#include "esp32-hal-uart.h"
#include "freertos/FreeRTOS.h"
#include "freertos/event_groups.h"
#include "esp_task.h"
#include "esp_task_wdt.h"
#include "freertos/queue.h"
#include "driver/uart.h"
#include "driver/timer.h"
#include <stdarg.h>
#include <stdlib.h>
#include <string.h>
#define SLOT_DATA_LENGTH 3
#define NUMBER_OF_FRAMES 4
#define NUMBER_OF_SLOT 32
#define NUMBER_OF_SLOT_IN_FRAME 8
#define SBUS_FRAME_SIZE 25
#define SBUS2_UART_RX_PIN (GPIO_NUM_25)
#define SBUS2_UART_TX_PIN (GPIO_NUM_26)
#define UART_RXBUFSIZE 30
#define SLOT_TIME 660 // 660 ms
#define WAIT_TIME 2000 // 2000 ms
#define RX_BUF_SIZE 1024 // we dont need more space in buffer

void SBUS2_uart_setup()
{
   SBUS2_uart_setup(SBUS2_UART_RX_PIN, SBUS2_UART_TX_PIN, UART_NUM_1 );
}

void SBUS2_uart_setup(int rx, int tx)
{
   SBUS2_uart_setup(rx, tx, UART_NUM_1 );
}

void SBUS2_uart_setup(int rx, int tx, int uart)
{
   tx_pin = tx;
   uart_num = (uart_port_t)uart;
   ESP_ERROR_CHECK(uart_param_config(uart_num, &uart_config));
   ESP_ERROR_CHECK(uart_set_line_inverse(uart_num, UART_INVERSE_RXD|UART_INVERSE_TXD)); 
   ESP_ERROR_CHECK(uart_set_pin(uart_num, tx, rx, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE));
   gpio_set_pull_mode((gpio_num_t)rx, GPIO_PULLDOWN_ONLY);
   gpio_pulldown_en((gpio_num_t)rx);
   ESP_ERROR_CHECK(uart_driver_install(uart_num, RX_BUF_SIZE, 0,0, NULL, 0));
   ESP_ERROR_CHECK(uart_isr_free(uart_num));
   ESP_ERROR_CHECK(uart_isr_register(uart_num,uart_intr_handle, NULL, ESP_INTR_FLAG_IRAM, 0/*handle_console*/));
   ESP_ERROR_CHECK(uart_enable_rx_intr(uart_num));

    // setup transmitter ISR
    timer_init(TIMER_GROUP_0, TIMER_1, &timer_config);
    timer_set_counter_value(TIMER_GROUP_0, TIMER_1, 0);
    timer_set_alarm_value(TIMER_GROUP_0, TIMER_1, SLOT_TIME);
    timer_enable_intr(TIMER_GROUP_0, TIMER_1);
    timer_isr_register(TIMER_GROUP_0, TIMER_1, &ISR_transmit_frame, NULL, 0, 0/*&s_timer_handle*/);
    timer_set_alarm(TIMER_GROUP_0,TIMER_1,TIMER_ALARM_EN);
   
    uart_flush(uart_num);

    uart_intr_config_t uart_intr;
    uart_intr.intr_enable_mask = UART_RXFIFO_FULL_INT_ENA_M | UART_RXFIFO_TOUT_INT_ENA_M;
    uart_intr.rxfifo_full_thresh = 26;
    uart_intr.rx_timeout_thresh = 2;
    uart_intr.txfifo_empty_intr_thresh = 10;
    uart_intr_config(uart_num, &uart_intr);

    initialize_slot_status();

    enable_receiving();
	
 	
	if(DemoMode){													//Nur wenn demo Mode
		uart_write_bytes(uart_num, sbus_frame, SBUS_FRAME_SIZE);
		sbus_frame[24] += 0x10;
	}
	else{
		pinMatrixOutDetach(tx_pin,false,true);
	}
}

void disable_receiving()
{
  sequence_count = 0;
  
  timer_set_alarm(TIMER_GROUP_0,TIMER_1,TIMER_ALARM_DIS);
  timer_pause(TIMER_GROUP_0,TIMER_1);
   
  timer_set_alarm_value(TIMER_GROUP_0,TIMER_1,WAIT_TIME);     // RX Interrupt with delay of 700µs -> 700µs + 1300µs = 2ms
  timer_set_counter_value(TIMER_GROUP_0,TIMER_1,0);
  timer_set_alarm(TIMER_GROUP_0,TIMER_1,TIMER_ALARM_EN);
  timer_start(TIMER_GROUP_0,TIMER_1);
}

void enable_receiving()
{
   // disable transmitter ISR
   /*timer_set_alarm(TIMER_GROUP_0,TIMER_1,TIMER_ALARM_DIS);
   timer_pause(TIMER_GROUP_0,TIMER_1);
   timer_set_counter_value(TIMER_GROUP_0,TIMER_1,0);*/
   
   timer_set_counter_value(TIMER_GROUP_0, TIMER_1, 0);
   timer_set_alarm_value(TIMER_GROUP_0, TIMER_1, 15000);
   timer_set_alarm(TIMER_GROUP_0,TIMER_1,TIMER_ALARM_EN);

   // flush input buffer first, to avoid getting old SBUS-Frames
   //uart_flush(uart_num);
   buffer_index = 0;
}
