==> BrushlessPower/SBUS2-Telemetry/Futaba_Telemetry/SBUS_usart.cpp <==
#include <Arduino.h>
#include <avr/io.h>
#include <avr/interrupt.h>
#include <stdarg.h>
#include <stdlib.h>
#include <string.h>
#include "SBUS_usart.h"
#define USART_BAUD              100000
#define SLOT_DATA_LENGTH        3
#define NUMBER_OF_FRAMES        4
#define NUMBER_OF_SLOT          32
#define NUMBER_OF_SLOT_IN_FRAME 8
#define SBUS_FRAME_SIZE         25
#define UART_RXBUFSIZE  30
#define FRAME_TIME_OUT  200 //ms
#define SLOT_TIME 165   // 248 is around 1 ms
#define WAIT_TIME 250   // 248 is around 1 ms
#define TIMEOUT   (248.0 * (FRAME_TIME_OUT / 1000.0))

void SBUS2_uart_setup ()
{
   uint32_t counter  = 640000;
   uint8_t  response = 0x00;
   
   noInterrupts();
   sbus_uart_init();
   sbus_timer_init();

   disable_receiving();
   
   UDR0 = 0xAA;
   response = 0x00;
   while(!(UCSR0A & (1 << UDRE0)));
   
   while ((counter > 1)  && ( response != 0x55 ))
   {
     response = UDR0;
     while ( UCSR0A & (1 << RXC0) );
     counter--;
   }      

   start_receiving();
   
   if(response != 0x55 )
   {
      enable_receiving();       
   }   
   interrupts();
   
}

inline void disable_receiving()
{
   UCSR0B |= (0 << RXEN0);
   UCSR0B |= (0 << RXCIE0);
}

inline void enable_receiving()
{
   UCSR0B |= (1 << RXEN0);
   UCSR0B |= (1 << RXCIE0);
}
